deployment/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: frontend
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: frontend
status:
  loadBalancer: {}
