deployment/frontend/web-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web-nodeport
  namespace: ne
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
  selector:
    app: web
